@@ -20,27 +20,38 @@ import java.math.BigDecimal;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
-import java.util.regex.Pattern;
 
 import groovy.lang.MissingPropertyException;
+import org.spockframework.runtime.extension.IMethodInvocation;
 import spock.lang.IgnoreIf;
 import spock.lang.PendingFeatureIf;
 import spock.lang.Requires;
 import spock.util.environment.Jvm;
 import spock.util.environment.OperatingSystem;
 
+import static java.util.Collections.emptyMap;
+
 /**
  * The context (delegate) for a {@link Requires}, {@link IgnoreIf} or {@link PendingFeatureIf} condition.
  */
 public class PreconditionContext {
-  private static final Pattern JAVA_VERSION = Pattern.compile("(\\d+\\.\\d+).*");
-
+  private final IMethodInvocation invocation;
   private final Map<String, Object> dataVariables = new HashMap<>();
 
   public PreconditionContext() {
+    this(null, emptyMap());
   }
 
   public PreconditionContext(Map<String, Object> dataVariables) {
+    this(null, dataVariables);
+  }
+
+  public PreconditionContext(IMethodInvocation invocation) {
+    this(invocation, emptyMap());
+  }
+
+  public PreconditionContext(IMethodInvocation invocation, Map<String, Object> dataVariables) {
+    this.invocation = invocation;
     this.dataVariables.putAll(dataVariables);
   }
 
@@ -48,15 +59,10 @@ public class PreconditionContext {
     if (dataVariables.containsKey(propertyName)) {
       return dataVariables.get(propertyName);
     }
+    if ((invocation != null) && "instance".equals(propertyName)) {
+      return invocation.getInstance();
+    }
     throw new MissingPropertyException(propertyName, getClass());
-  }
-
-  public void setDataVariable(String name, Object value) {
-    dataVariables.put(name, value);
-  }
-
-  public void setDataVariables(Map<String, Object> dataVariables) {
-    this.dataVariables.putAll(dataVariables);
   }
 
   /**
